[package]
name = "subir_archivo_temporal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
futures = "0.3.28"
native-dialog = "0.6.4"
reqwest = {version = "0.11.20", features = ["multipart"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tinyfiledialogs = "3.9.1"
tokio = {version = "1.32.0", features = ["full"]}
web-view = "0.7.3"
